b=714068 use gtk_icon_theme_get_icon_sizes instead of gtk_icon_theme_has_icon to determine whether GtkWindow will use an icon r=karlt